# uwb_paper

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
docs/: figure_titles.md  nbi_simulation_fix_summary.md
scripts/: demo_mui_analysis.py  demo_nbi_analysis.py  demo_waveform.py  diagnose_pulse_spectrum.py  generate_figures.py  plot_psd_fcc_compliance.py  run_mui_analysis.py  run_nbi_analysis.py  test_font_config.py
specs/001-th-uwb-simulation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-th-uwb-simulation/checklists/: requirements.md
specs/001-th-uwb-simulation/contracts/: README.md  channel.md  modulation.md  pulse.md
specs/002-psd-fcc-compliance/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-psd-fcc-compliance/checklists/: requirements.md
specs/002-psd-fcc-compliance/contracts/: compliance.md  fcc_mask.md  psd.md  pulse.md
src/: __init__.py  config.py
src/models/: __init__.py  channel.py  fcc.py  modulation.py  psd.py  pulse.py
src/simulation/: __init__.py  metrics.py  receiver.py
src/visualization/: __init__.py  compliance.py  config.py  performance.py  waveform.py
tests/: __init__.py
tests/integration/: test_end_to_end.py
tests/unit/: test_channel.py  test_fcc.py  test_metrics.py  test_modulation.py  test_psd.py  test_pulse.py  test_receiver.py
