[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "th-uwb-simulation"
version = "1.0.0"
description = "TH-UWB Communication System Simulation for Academic Paper"
authors = [
    {name = "UWB Research Team", email = "research@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0,<2.0.0",
    "matplotlib>=3.7.0,<4.0.0",
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["uwb", "th-uwb", "simulation", "communication", "th-ppm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "pylint>=3.0.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | outputs
)/
'''

[tool.pylint.main]
py-version = "3.11"
jobs = 0  # Auto-detect CPU cores

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0103",  # Invalid name (allow single-letter variables in math)
    "C0114",  # Missing module docstring (allow for __init__.py)
    "R0913",  # Too many arguments (common in config classes)
    "R0914",  # Too many local variables (common in simulation)
]

[tool.pylint.format]
max-line-length = 100
indent-string = "    "

[tool.pylint.design]
max-attributes = 15  # SystemConfig has many attributes
min-public-methods = 1

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
